--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,11 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:text="btn_retrofit2" />
+    <Button
+        android:id="@+id/btn_rebound"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="btn_rebound" />
 
 
 </LinearLayout>
